# gifscript

./: .clang-format  CMakeLists.txt  FindRAGEL.cmake  LICENSE.MD  README  gifscript.rl  logger.h  machine.cpp  machine.h  parser.y  registers.cpp  registers.h  types.h  version.h
.github/workflows/: branch-build.yml  master-release.yml
backend/: backend.hpp  c_code.cpp  c_code.h
backends/include/: backend.hpp  c_code.hpp  gifscript_backend.hpp
backends/src/: c_code.cpp  gifscript_backend.cpp
core/include/: logger.hpp  machine.hpp  registers.hpp  types.hpp  version.hpp
core/src/: logger.cpp  machine.cpp  parser.y  registers.cpp
examples/: circles.gs  nested_macros.gs  textured.gs  triangles.gs
frontends/: gifscript.rl  tpircsfig.cpp
tests/: CMakeLists.txt  core_tests.cpp  type_tests.cpp
